<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Popular Movies -->
    <string name="popular_name">Popular</string>
    <string name="top_rated_name">Top Rated</string>
    <string name="popular_value">popular</string>
    <string name="top_rated_value">top_rated</string>
    <string name="movie_sort">Movie Sort</string>
    <string name="movie_list_key">movieList</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_movie">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
</resources>
